--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,7 @@
 	<packaging>pom</packaging>
 	<modules>
 		<module>catalog-detail</module>
+		<module>catalog-financial</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
