--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 	<modules>
 		<module>catalog-detail</module>
 		<module>catalog-financial</module>
-	</modules>
+        <module>catalog-consumer</module>
+    </modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
@@ -51,6 +52,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
