add unit tests for consumer service

--- a/catalog-consumer/pom.xml
+++ b/catalog-consumer/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>catalog-consumer</artifactId>
+    <dependencies>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
