--- a/catalog-detail/src/main/resources/application.properties
+++ b/catalog-detail/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=${detail.service.port}
+
 # datasource
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:queiroz-catalog
