--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
 		<module>catalog-detail</module>
 		<module>catalog-financial</module>
         <module>catalog-consumer</module>
+		<module>library/catalog-common</module>
 	</modules>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
