Refactoring and tests

--- a/config/application.properties
+++ b/config/application.properties
@@ -9,3 +9,10 @@ consumer.service.host=http://localhost:${consumer.service.port}
 financial.service.name=financial
 financial.service.port=8081
 financial.service.host=http://localhost:${financial.service.port}
+
+# jpa
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
