--- a/catalog-consumer/pom.xml
+++ b/catalog-consumer/pom.xml
@@ -17,6 +17,12 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>br.com.queiroz</groupId>
+            <artifactId>catalog-detail</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <properties>
