--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,16 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>2.7.1</version>
 		</dependency>
-
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
